www/css/ionic.app.css
/* ... */
  .deepblue-theme .scroll-refresher .ionic-refresher-content {
    color: #ffffff; }
  .deepblue-theme .scroll-refresher {
    color: #ffffff;
    background: #ffc900; }
  .deepblue-theme .scroll-refresher .ionic-refresher-content .spinner {
    stroke: #ffffff;
    fill: #ffffff; }
  .deepblue-theme .button.button-lightNavy {
    background: #376484;
    color: #fff; }
  .deepblue-theme .button.button-crimson {
    background: #ed143d;
    color: #fff; }
  .deepblue-theme .button.button-white {
    background: #ffffff;
    color: #376484; }
  .deepblue-theme .button-medium {
    font-size: 18px;
    border-radius: 8px; }
  .deepblue-theme .icon-text {
    font-size: 27px; }
  .deepblue-theme .button.button-red {
    background-color: red;
    color: #fff; }
  .deepblue-theme .button-big {
    padding: 5px 16px;
    min-width: 140px;
    min-height: 62px;
    font-size: 25px;
    font-weight: 400;
    line-height: 30px; }
  .deepblue-theme .button-clear {
    min-width: 20px; }
  .deepblue-theme h1.header {
    background-color: #ffc900;
    color: #3A2D21;
    margin-top: -5px;
    font-size: 1.6em;
    padding: 6px 0;
    margin-bottom: 0; }
  .deepblue-theme h1.footer-title {
    color: #444;
    margin: 0 auto;
    font-size: 1.2em;
    align-self: center; }
  .deepblue-theme h1.pujaFooter-title {
    color: #444;
    margin: 0 auto;
    font-size: 1em;
    align-self: center; }
  .deepblue-theme h1.pujaFooter-title.bannerText {
    line-height: 2em; }
  .deepblue-theme .bar .title + .buttons.buttons-right {
    bottom: 0; }

/*

  This styles are specific to example views, but can be re-used in your projects

*/
h1 {
  font-size: 1.6em; }

h3, .h3 {
  font-size: 21px;
  margin-bottom: 1.7%; }

.home-title {
  /* padding-top:50px !important; */
  font-size: 2.6em;
  padding-top: 20px;
  /*font-family: 'Arial', sans-serif !important;*/
  font-weight: 400; }

.product-price {
  background-color: rgba(0, 0, 0, 0.5) !important;
  z-index: 1000;
  position: relative;
  margin-top: -140px;
  float: right;
  margin-right: 20px;
  border: solid white 2px;
  height: 7.2em;
  width: 7.2em;
  border-radius: 100%; }

.landingBg {
  background-image: url("../img/IMG-20160913-WA0001.jpg");
  background-size: cover;
  background-position: center; }

.landingBg2 {
  background-image: url("../img/durga-puja-wallpaper-9.jpg");
  background-size: cover;
  background-position: center; }

.landingBg3 {
  background-image: url("../img/1657R-45722.jpg");
  background-size: cover;
  background-position: center; }

.product-price-price {
  font-size: 1.2em !important;
  margin-top: 8px; }

.product-price-text {
  margin-top: -25px; }

.product-price:active {
  background-color: #387ef5 !important; }

.cart-badge {
  background: #ef473a !important;
  position: relative !important;
  z-index: 1000;
  display: inline-block !important;
  width: 24px;
  height: 24px;
  border: solid white 1px;
  border-radius: 24px;
  text-align: center;
  line-height: 20px;
  font-weight: bold;
  margin-left: -20px !important;
  top: -4px; }

.avatar-account {
  height: 128px;
  width: 128px;
  border-radius: 100%;
  border: solid white 4px; }

.avatar-menu {
  border-radius: 100%;
  border: solid white 2px;
  height: 120px;
  width: 120px;
  margin: auto; }

.bar .title {
  color: #fff; }

#map {
  width: 100%;
  flex: 1; }

#test .scroll {
  display: flex;
  flex-flow: column; }

/* .scroll {
    height: 100%;
} */
#productList .item-content {
  padding: 0; }

#cart .item-content {
  padding-right: 20px; }

#cart label.item.item-input {
  padding: 0;
  border: none; }

#cart input {
  flex: 1 90px;
  padding-right: 0; }

.quantity {
  background-color: #eee;
  font-size: 0.7em; }

#productList .input-label {
  padding: 5px 10px 5px 0px; }

.cart-image {
  width: 100%; }

.item-image img {
  height: 12em; }

.checkout button {
  text-transform: uppercase;
  margin: 2em 0 1em; }

/* .platform-android .action-sheet .action-sheet-title, .platform-android .action-sheet .button {
  padding-left: 16px;
  font-size: 1.3em;
} */
.ui-gradient-light {
  background: #eee; }

.upperContent {
  height: 80%; }

.info-header {
  color: #444;
  font-size: 1.2em; }

/* .loginHeader {
  //height: 40%; 
  position:relative; 
  //background: #fff url("../img/172596980.jpg") no-repeat center / cover;
  opacity: 0.8;
} */
.homeHeader {
  height: 40%;
  position: relative;
  background: #fff url("../img/durgaface.jpg") no-repeat center/cover; }

.loginHeader .logo, .signupHeader .logo {
  background: #fff url("../img/qsn.png") no-repeat center bottom/cover;
  height: 5.5em;
  width: 5.5em;
  border-radius: 100%;
  margin-top: -3.1em; }

.loginContent {
  /*margin: 6% 0;*/ }

.loginContent h3 {
  color: black; }

.signupHeader .logo {
  margin-top: 0;
  height: 6.5em;
  width: 6.5em; }

.forgotPasswordText {
  color: #333 !important;
  margin: 11% 3%; }

.item-input {
  font-size: 2.2em; }

.loginContent .item-input {
  padding: 2px 0 2px 10px; }

input[type="text"], input[type="password"] {
  font-size: 0.6em; }

/* .simple-form button.button-block{
    margin-top: 2em;
  } */
.landing .button-block {
  margin-top: 0; }

.slider {
  height: 90%; }

.box {
  height: 90%; }

.slider-pager-page {
  color: #ffffff !important; }

.slider-pager-page.active {
  color: #ffc900 !important; }

.padding-topside {
  padding: 10px 10px 0; }

.facebook-sign-in {
  background: #fff url("../img/ZW4QC.png") no-repeat center bottom/cover;
  width: 202px; }

.button-inline {
  padding: 0 20px; }

h1.title {
  position: absolute;
  bottom: 0;
  left: 10px;
  font-size: 1.1em;
  font-weight: 400;
  letter-spacing: 1px;
  color: #fff !important; }

.listDetail {
  padding: 5px; }

span.price {
  color: #33cd5f;
  font-weight: 400; }

span.feature {
  color: #444;
  font-weight: 600; }

.spacing {
  height: 15px;
  border-shadow: 1px solid #444;
  background-color: #d3d3d3; }

.menu i.icon {
  font-size: 1.4em; }

.contactus article.padding {
  padding-left: 15px; }
/* ... */

